--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "naive-ui": "^2.20.2",
     "node-sass": "^6.0.1",
     "prettier": "^2.2.1",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "typescript": "~4.1.5",
+    "vfonts": "^0.1.0",
     "vue-jest": "^5.0.0-0"
   }
 }
