--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "colorthief": "^2.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
